# sql-forge

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: sql-forge.yml
crates/sql-forge-macro/src/: lib.rs
sql-forge-macro/src/: lib.rs
src/: lib.rs  traits.rs
tests/: Dockerfile  checksum.sh  env-mysql.sh  env-postgres.sh  env-sqlite.sh  init-pg.sql  init-sqlite.sql  sql-forge-test.sh  sql-forge-with-db.sh  sql-forge.sh  tests.rs  verify-versions.sh
tests/mysql/: checksums.txt  tests_expanded.rs
tests/mysql/.sqlx/: query-028e2e8a2f5f62857e37f7639d68f362624a92d7446f459a8a34a54b3ccf796e.json  query-03bb545138033285bf0dfc7602c31225496d4b00c381118fcddfcca857199a69.json  query-0e99bc3c55f0926c899eabac0ab9b01d88726cf011f7cf453d19ef1ab1b0cc21.json  query-11c19f1e72cc7e5a3f021856e14208e0a5232d9981138266ee25fe442cfeece0.json  query-1e23dbdd3b7a15a33174560dd31d7828587a7a53a4776f31287e3f4e28a4f2be.json  query-1edbd0db2440730f5c29b63ab6977a8726e479f549b301fc6b4d4385c7e8ce03.json  query-25756cfb88255d0fba4714f181b15d05ce4736fd122317d87bea168639b15b7a.json  query-2da3adcb1fb05d4d3e4779017417e2e3b87e1179ebabf9fbe920d288098f2074.json  query-31942453add0ea564d62e02ae03734493ed274525578eb2cd9e0b12120c01283.json  query-33d8d890c21269dab9d9879c941a1624d070b69e335b36c736405d42a6370665.json  query-3eaa9818b03e520b77465a05c556319137c03ca6fc7c76d0f733c96d78cf9792.json  query-42d496e6c3edd43af6193b880189c89a194efea374bfb41d6504191a30e8827f.json  query-4f83689fa22006d81d1af517354dd7c8ca7bfbed5f0b00102dd388a4a71b0e2b.json  query-4ff6320c5576fe5887fc10907bb91923c42693b59cdd193ef40f89950e815851.json  query-507a3d8b5db8ba62e029bf8bc07d683d3b85727e3b7be1e446fff7625cfebe10.json  query-5135c9246e2a602049236eb26f17f0457a3249cc2e0985f1a365cc7e42b41f27.json  query-5b47b64baa200611e534ba978911d20d268bfd0156b7fb287af2b7903613d515.json  query-5d9f91347c3f597c722521fa4f01a14c7fdc1b4c06015fb6ccfb0b48094d4d2b.json  query-627a23067b1d2ad6f656d6af992b464ea991e648daf1a501531048a30d140e9f.json  query-67b12c21db98739579f8dd8f5fd04d446156e106df7c023a286d6ac9c2e19030.json  query-6be3f6ac7a1ed37bf4c7f230a4b6b451c6b49b7598667f93d4f75dc99b0511de.json  (+27 more)
tests/postgres/: checksums.txt  tests_expanded.rs
tests/sqlite/: checksums.txt  tests_expanded.rs
tests/ui/: batch_param_map_entry_unused_when_only_batch_uses_name.rs  batch_source_without_sql.rs  caveat_string_literal_batch_close.rs  caveat_string_literal_batch_open.rs  multiple_models_static_mismatch.rs  section_param_unused_in_section_sql.rs
(+222 files in other folders)
