[package]
name = "sql-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
sql-forge-macro = { path = "./crates/sql-forge-macro" }
sql-forge-trait = { path = "./crates/sql-forge-trait" }

[dev-dependencies]
sqlx = { version = "0.8", features = ["mysql", "postgres", "sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
