[package]
name = "sql-forge"
version.workspace = true
edition.workspace = true
description = "Proc-macro combining compile-time SQL validation with a runtime QueryBuilder for dynamic queries using named parameters."
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[workspace]
members = [
	".",
	"crates/sql-forge-macro",
	"crates/sql-forge-trait",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/lucasbasquerotto/sql-forge"
repository = "https://github.com/lucasbasquerotto/sql-forge"

[workspace.dependencies]
sql-forge-macro = { version = "0.1.0", path = "./crates/sql-forge-macro" }
sql-forge-trait = { version = "0.1.0", path = "./crates/sql-forge-trait" }

[dependencies]
sql-forge-macro.workspace = true
sql-forge-trait.workspace = true

[dev-dependencies]
sqlx = { version = "0.8", features = ["mysql", "postgres", "sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
trybuild = "1.0.116"
