[package]
name = "sql-forge"
version.workspace = true
edition.workspace = true
description = "Proc-macro combining compile-time SQL validation with a runtime QueryBuilder for dynamic queries using named parameters."
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[workspace]
members = [
	".",
	"sql-forge-macro",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/lucasbasquerotto/sql-forge"
repository = "https://github.com/lucasbasquerotto/sql-forge"

[workspace.dependencies]
sql-forge-macro = { version = "0.4.0", path = "./sql-forge-macro" }

[dependencies]
sql-forge-macro.workspace = true
sqlx = { version = "0.9.0", default-features = false }

[dev-dependencies]
sqlx = { version = "0.9.0", features = ["mysql", "mysql-rsa", "postgres", "sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
trybuild = "1.0.116"
